copypasta transition generation

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,5 @@
 platform = atmelavr
 framework = arduino
 board = diecimilaatmega168
-extra_script = bin/effects.py
+extra_script = bin/generate_code.py
 # targets = upload
